--- a/docs/api/blockchain/accounts.mdx
+++ b/docs/api/blockchain/accounts.mdx
@@ -537,8 +537,12 @@ The oui list for account `13tyMLKRFYURNBQqLSqNJg9k41maP1A7Bh8QYxR13oWv7EnFooc`
 
 ## Activity for Account
 
-:::caution The `/activity` route will be deprecated on May 1, 2022 and will be
-replaced by [`/roles`, described below](#roles-for-account) :::
+:::caution
+
+The `/activity` route will be deprecated on May 1, 2022 and will be
+replaced by [`/roles`, described below](#roles-for-account)
+
+:::
 
 ```
 GET https://api.helium.io/v1/accounts/:address/activity
@@ -1207,7 +1211,9 @@ the reward.
 This route is paged using a `cursor`.
 
 :::info For older reward results, if the `type` is `null` the amount is a total
-for that account or hotspot in the given block. :::
+for that account or hotspot in the given block.
+
+:::
 
 <Tabs
   block={true}
@@ -1272,7 +1278,9 @@ the reward.
 This route is paged using a `cursor`.
 
 :::info For older reward results, if the `type` is `null` the amount is a total
-for that account in the given block. :::
+for that account in the given block.
+
+:::
 
 <Tabs
   block={true}
