--- a/docs/api/blockchain/hotspots.mdx
+++ b/docs/api/blockchain/hotspots.mdx
@@ -787,8 +787,12 @@ Fetch all hotspots in h3 index: `882aa38c2bfffff`
 GET https://api.helium.io/v1/hotspots/:address/activity
 ```
 
-:::caution The `/activity` route will be deprecated on May 1, 2022 and will be
-replaced by [`/roles`, described below](#hotspot-roles) :::
+:::caution
+
+The `/activity` route will be deprecated on May 1, 2022 and will be
+replaced by [`/roles`, described below](#hotspot-roles)
+
+:::
 
 Lists all blockchain transactions that the given Hotspot was involved in. This
 route is paged using a `cursor`.
@@ -1931,8 +1935,12 @@ the reward.
 
 This route is paged using a `cursor`.
 
-:::info For older reward results, if the `type` is `null` the amount is a total
-for that hotspot in the given block. :::
+:::info
+
+For older reward results, if the `type` is `null` the amount is a total
+for that hotspot in the given block.
+
+:::
 
 <Tabs
   block={true}
@@ -2018,8 +2026,12 @@ the reward.
 
 This route is paged using a `cursor`.
 
-:::info For older reward results, if the `type` is `null` the amount is a total
-for that hotspot in the given block. :::
+:::info
+
+For older reward results, if the `type` is `null` the amount is a total
+for that hotspot in the given block.
+
+:::
 
 <Tabs
   block={true}
