--- a/docs/api/blockchain/introduction.mdx
+++ b/docs/api/blockchain/introduction.mdx
@@ -59,5 +59,9 @@ http get $(API_URL)/v1/blocks?cursor=eyJiZWZvcmUiOjQzOTIwMX0
 Which will return the next page of results and a next `cursor` for the following
 page.
 
-:::info In order to improve caching the API may return an empty data array and a
-cursor. Use the cursor to request more data. :::
+:::info
+
+In order to improve caching the API may return an empty data array and a
+cursor. Use the cursor to request more data.
+
+:::
