--- a/docs/blockchain/helium-token/helium-token.mdx
+++ b/docs/blockchain/helium-token/helium-token.mdx
@@ -57,7 +57,9 @@ schedule.
 :::info In the below issuance schedule, year 1 starts on **August 1, 2019**. The
 first halving happened on approximately day one of the beginning of year three,
 **August 1, 2021**. The network is now producing `2,500,000` HNT until the next
-scheduled halving. :::
+scheduled halving.
+
+:::
 
 | Year | HNT at start of year | Total HNT Minted |
 | :--- | :------------------- | :--------------- |
@@ -112,10 +114,14 @@ scheduled halving. :::
 | 49   | 239,999,986          | 3.6              |
 | 50   | 239,999,989          | 3.6              |
 
-:::important While the above schedule states approximately `240,000,000` HNT
-will be produced, year one of the blockchain only produced around `43,000,000`
-of the target `60,000,000` due to some slow block times. So the actual maximum
-supply is `223,000,000` HNT. :::
+:::important
+
+While the above schedule states approximately `240,000,000` HNT will be
+produced, year one of the blockchain only produced around `43,000,000` of the
+target `60,000,000` due to some slow block times. So the actual maximum supply
+is `223,000,000` HNT.
+
+:::
 
 ### Data Credits and Burn-and-Mint Economics
 
@@ -153,14 +159,20 @@ the following math:
 - The current HNT Oracle price is `$1`
 - Burning `.5` HNT would produce the needed `50,000` DCs
 
-:::important Once burned, DCs are owned by the Helium wallet specified in the
+:::important
+
+Once burned, DCs are owned by the Helium wallet specified in the
 burn transaction. They are non-transferrable and can only be used by the wallet
-owner. :::
+owner.
+
+:::
 
 ### Net Emissions
 
 :::info Though Net Emissions was introduced as part of HIP 20, it has not yet
-been activated on chain. :::
+been activated on chain.
+
+:::
 
 At this point, the astute reader might be asking themselves the following
 question:
