--- a/docs/mine-hnt/data-only-guides/balena-data-only-hotspot.mdx
+++ b/docs/mine-hnt/data-only-guides/balena-data-only-hotspot.mdx
@@ -21,12 +21,16 @@ This configuration can be achieved by installing the **_gatewayrs_** and
 [Nebra](https://github.com/nebraltd) and using balenaOS and
 [balenaCloud](https://balena.io).
 
-:::warning Data Only Hotspots cannot earn $HNT, at least for now, and after
-milestone 2 they will earn $HNT only for Device Packet Transfer. Remember to
-keep an eye on [Light Hotspots - BETA](/mine-hnt/light-hotspots) and the
+:::warning
+
+Data Only Hotspots cannot earn $HNT, at least for now, and after milestone 2
+they will earn $HNT only for Device Packet Transfer. Remember to keep an eye on
+[Light Hotspots - BETA](/mine-hnt/light-hotspots) and the
 **#gateway-development** channel on the
 [Helium Discord Server](https://discord.gg/helium) to check how the development
-process evolves. :::
+process evolves.
+
+:::
 
 ## Getting started
 
@@ -38,8 +42,12 @@ process evolves. :::
 - [RAK 2287 LoRa concentrator SPI based](https://store.rakwireless.com/products/rak2287-lpwan-gateway-concentrator-module)
   and [RAK2287 Pi Hat](https://store.rakwireless.com/products/rak2287-pi-hat)
 
-:::important To use the concentrator module with a Raspberry Pi HAT, you must
-make sure to order the variation with the SPI interface. :::
+:::important
+
+To use the concentrator module with a Raspberry Pi HAT, you must make sure to
+order the variation with the SPI interface.
+
+:::
 
 ### Software
 
