--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -37,10 +37,14 @@ The fee schedule is as follows:
 - **add data only hotspot**: 1000000 DC ($10)
 - **assert location**: 500000 DC ($5)
 
-:::info Data Credits in your Helium Console organization cannot be used to pay
+:::info
+
+Data Credits in your Helium Console organization cannot be used to pay
 blockchain onboarding and assert location fees for Hotspots. To onboard a
 Hotspot, you'll need to burn HNT for Data Credits to the wallet that owns the
-Hotspot. :::
+Hotspot.
+
+:::
 
 ## Pre-requisites
 
@@ -95,10 +99,14 @@ following endpoint: `https://api.helium.io/v1/pending_transactions/TXN_HASH`
 
 Once the transaction clears, you're done linking the Hotspot with your wallet.
 
-:::warning At this point, you will want to be certain that you've backed up the
-data only hotspot's keypair. Its location can be customized in the client's
+:::warning
+
+At this point, you will want to be certain that you've backed up the data only
+hotspot's keypair. Its location can be customized in the client's
 `settings.toml`, but by default, it's located at
-`/etc/helium_gateway/gateway_key.bin` :::
+`/etc/helium_gateway/gateway_key.bin`
+
+:::
 
 ## Assert Hotspot
 
