--- a/docs/mine-hnt/full-hotspots/become-a-maker/burn-hnt-to-maker-wallet.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/burn-hnt-to-maker-wallet.mdx
@@ -78,7 +78,9 @@ onboarding steps. Here is that address:
 
 Once you burn HNT to a specified wallet address, they are lost and gone forever.
 The resulting DCs are non-transferable. Please double-check any wallet address
-before executing any HNT burn. :::
+before executing any HNT burn.
+
+:::
 
 The actual mechanism for burning HNT to DCs is via an on-chain burn transaction
 [using the Helium Blockchain Wallet CLI](https://github.com/helium/helium-wallet-rs).
