--- a/docs/mine-hnt/full-hotspots/become-a-maker/docker-integration.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/docker-integration.mdx
@@ -93,9 +93,12 @@ please see
 [here](https://github.com/helium/sx1302_hal/tree/helium/hotspot/packet_forwarder).
 :::
 
-:::warning If you are using our packet forwarder, be sure to customize the
+:::warning
+
+If you are using our packet forwarder, be sure to customize the
 `rssi_offset` field for your particular concentrator design. Misconfiguring this
 value may result in decreased Proof-of-Coverage performance for your customers.
+
 :::
 
 ## Enable ECC608 and D-Bus
