--- a/docs/mine-hnt/understanding-hotspot-status.mdx
+++ b/docs/mine-hnt/understanding-hotspot-status.mdx
@@ -52,7 +52,11 @@ Soon, after the activation of Light Hotspots on the network, a Hotspot's sync
 status will no longer need to show block height, but rather, display whether it
 is connected to a Validator, where it is getting all its block information from.
 
-:::info **Why is this?** Light Hotspots will not need to store a complete ledger
-(or blockchain) on the hardware itself, but instead, ask a Validator for recent
-block information. This simplifies Hotspots and gets rid of SD card issues,
-syncing, snapshots, and other problems related to slow sync. :::
+:::info **Why is this?**
+
+Light Hotspots will not need to store a complete ledger (or blockchain) on the
+hardware itself, but instead, ask a Validator for recent block information. This
+simplifies Hotspots and gets rid of SD card issues, syncing, snapshots, and
+other problems related to slow sync.
+
+:::
