--- a/docs/mine-hnt/validators/mainnet/wallet.mdx
+++ b/docs/mine-hnt/validators/mainnet/wallet.mdx
@@ -125,9 +125,12 @@ format:
 The transaction is not submitted to the system unless the `--commit` option is
 given.
 
-:::warning This command sequentially walks through the JSON and stakes one
-validator at a time. If this command errors out all further staking transactions
-will abort. :::
+:::warning
+
+This command sequentially walks through the JSON and stakes one validator at a
+time. If this command errors out all further staking transactions will abort.
+
+:::
 
 ### List Associated Validators
 
