--- a/docs/mine-hnt/validators/troubleshooting.mdx
+++ b/docs/mine-hnt/validators/troubleshooting.mdx
@@ -86,8 +86,12 @@ using `nc -zv -w 2 <ip> 8080`
    Connection to 23.100.120.236 8080 port [tcp/http-alt] succeeded!
 ```
 
-:::tip This also works for your Validator 2154 port, just swap it in for the
-8080 above! :::
+:::tip
+
+This also works for your Validator 2154 port, just swap it in for the
+8080 above!
+
+:::
 
 ## Check block absorb times
 
