--- a/docs/use-the-network/console/console-hosting-providers.mdx
+++ b/docs/use-the-network/console/console-hosting-providers.mdx
@@ -15,8 +15,11 @@ This section provides information about Console Hosting Providers available in
 the community. Note this is not an exhaustive list. If you’d like to add your
 company feel free to make a pull request: https://github.com/helium/docs
 
-:::info Links and information for these Console Hosting Providers is provided as
-is. :::
+:::info
+
+Links and information for these Console Hosting Providers is provided as is.
+
+:::
 
 The Helium Foundation is not directly associated with any of the following
 vendors and makes no endorsements about the quality of their offering. For more
