--- a/docs/use-the-network/console/debug.mdx
+++ b/docs/use-the-network/console/debug.mdx
@@ -41,11 +41,14 @@ The Debug tool will display a message for every uplink or downlink. For detailed
 information on the contents of the messages please see the JSON schema
 documentation.
 
-:::info Payloads shown in the debug messages are
-[base64 encoded](https://en.wikipedia.org/wiki/Base64), as are the JSON messages
+:::info Payloads shown in the debug messages are [base64
+
+encoded](https://en.wikipedia.org/wiki/Base64), as are the JSON messages
 received by integrations. You will need to decode the payload strings in order
 to correctly interpret the payload data. One way to do this is to use a
-[Function Decoder](functions). :::
+[Function Decoder](functions).
+
+:::
 
 #### Activation
 
