--- a/docs/use-the-network/console/functions.mdx
+++ b/docs/use-the-network/console/functions.mdx
@@ -49,11 +49,14 @@ another service.
 
 ## Creating a Decoder Function
 
-:::info **Decoder Library on GitHub**  
+:::info **Decoder Library on GitHub**
+
 If you have purchased an off-the-shelf device, it is likely that there already
 exists a decoder you can use! We have a
 [repository ](https://github.com/helium/console-decoders)that contains decoders
-for a number of popular devices. :::
+for a number of popular devices.
+
+:::
 
 To begin creating a new function within the Helium Console, select Functions
 from the left side navigation. Then create a new Function by clicking the Add
