--- a/docs/use-the-network/console/integrations/azure.mdx
+++ b/docs/use-the-network/console/integrations/azure.mdx
@@ -16,9 +16,13 @@ To help ensure stable device connectivity only use Console to connect to client
 ids. Other device monitoring tools in IoT Hub will connect to the device using
 the same client id which will cause connectivity instability.
 
-:::important For more information getting started with the Azure IoT Hub
+:::important
+
+For more information getting started with the Azure IoT Hub
 integration, check out our Tips & Tricks video on YouTube
-[here](https://youtu.be/emJ88cGF-Ew). :::
+[here](https://youtu.be/emJ88cGF-Ew).
+
+:::
 
 ## On Azure IoT Hub
 
@@ -37,9 +41,13 @@ Console requires the following permissions.
 - Registry Write: create devices in your hub
 - Device Connect: send messages through http/mqtt to your azure device
 
-:::important You must create your own policy and ensure it includes the
+:::important
+
+You must create your own policy and ensure it includes the
 permissions listed above. Although the `iothubowner` policy includes those by
-default it's not designed to be used for external integrations. :::
+default it's not designed to be used for external integrations.
+
+:::
 
 ## On Console
 
