--- a/docs/use-the-network/console/integrations/cargo.mdx
+++ b/docs/use-the-network/console/integrations/cargo.mdx
@@ -8,9 +8,13 @@ slug: /use-the-network/console/integrations/cargo
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-:::info [Helium Cargo](http://cargo.helium.com/) is an evaluation tool and the
-data collected is available to all developers. Please do not share any sensitive
-information. Use at your own discretion. :::
+:::info
+
+[Helium Cargo](http://cargo.helium.com/) is an evaluation tool and the data
+collected is available to all developers. Please do not share any sensitive
+information. Use at your own discretion.
+
+:::
 
 ## Add a Cargo Integration
 
@@ -33,8 +37,12 @@ devices for easy management. To connect one or more devices to one or more
 integrations, simply connect the Device and Integration nodes on the Flows
 Workspace.
 
-:::info Quick video tutorial connecting devices to an integration
-[here](https://www.youtube.com/watch?v=lnERw1f7TGE). :::
+:::info
+
+Quick video tutorial connecting devices to an integration
+[here](https://www.youtube.com/watch?v=lnERw1f7TGE).
+
+:::
 
 Node elements (devices, labels, integrations) need to be created before they're
 available on the Flows Workspace. More information about Flows
@@ -44,10 +52,13 @@ available on the Flows Workspace. More information about Flows
 
 The Cargo endpoint is where device data is sent if connected with a Label.
 
-**HTTP Details**  
-Method: `post`  
-Endpoint: `https://cargo.helium.com/api/payloads`  
-Headers: `{"Content-Type":"application/json"}`
+**HTTP Details**
+
+| key      | value                                   |
+| :------- | :-------------------------------------- |
+| Method   | `post`                                  |
+| Endpoint | `https://cargo.helium.com/api/payloads` |
+| Headers  | `{"Content-Type":"application/json"}`   |
 
 ## Cargo Payload
 
