--- a/docs/use-the-network/console/integrations/mqtt.mdx
+++ b/docs/use-the-network/console/integrations/mqtt.mdx
@@ -29,8 +29,12 @@ devices for easy management. To connect one or more devices to one or more
 integrations, simply connect the Device and Integration nodes on the Flows
 Workspace.
 
-:::info Quick video tutorial connecting devices to an integration
-[here](https://www.youtube.com/watch?v=lnERw1f7TGE). :::
+:::info
+
+Quick video tutorial connecting devices to an integration
+[here](https://www.youtube.com/watch?v=lnERw1f7TGE).
+
+:::
 
 Node elements (devices, labels, integrations) need to be created before they're
 available on the Flows Workspace. More information about Flows
@@ -42,14 +46,14 @@ available on the Flows Workspace. More information about Flows
 
 **Subscribe to:** `{optional_prefix}/helium/{Device ID}/rx`
 
-Example with prefix: `mqtt/helium/3c822699-37fd-4df6-a84d-93037a450843/rx`  
+Example with prefix: `mqtt/helium/3c822699-37fd-4df6-a84d-93037a450843/rx`
 Example without prefix: `helium/3c822699-37fd-4df6-a84d-93037a450843/rx`
 
 ### Device Downlink \(Send Data to Device\)
 
 **Publish to:** `{optional_prefix}/helium/{Device ID}/tx`
 
-Example with prefix: `mqtt/helium/3c822699-37fd-4df6-a84d-93037a450843/tx`  
+Example with prefix: `mqtt/helium/3c822699-37fd-4df6-a84d-93037a450843/tx`
 Example without prefix: `helium/3c822699-37fd-4df6-a84d-93037a450843/tx`
 
 ## MQTT Messages
