--- a/docs/use-the-network/console/integrations/mydevices-cayenne.mdx
+++ b/docs/use-the-network/console/integrations/mydevices-cayenne.mdx
@@ -38,9 +38,12 @@ integration:
 
 The next step is to name the integration
 
-:::info **Downlink Not Yet Supported**  
+:::info **Downlink Not Yet Supported**
+
 The MyDevices integration currently only supports uplinks. Downlinks are in the
-process of being implemented and will be available soon. :::
+process of being implemented and will be available soon.
+
+:::
 
 ## Connecting Integrations to Devices
 
@@ -50,8 +53,12 @@ devices for easy management. To connect one or more devices to one or more
 integrations, simply connect the Device and Integration nodes on the Flows
 Workspace.
 
-:::info Quick video tutorial connecting devices to an integration
-[here](https://www.youtube.com/watch?v=lnERw1f7TGE). :::
+:::info
+
+Quick video tutorial connecting devices to an integration
+[here](https://www.youtube.com/watch?v=lnERw1f7TGE).
+
+:::
 
 Node elements (devices, labels, integrations) need to be created before they're
 available on the Flows Workspace. More information about Flows
@@ -80,9 +87,12 @@ From the Cayenne dashboard, click **Add New** &gt; **Device / Widget**.
 From the list of devices & widgets that appears, click **LoRa** and select the
 **Helium** Network option to view a list of Helium supported devices.
 
-:::warning **Ensure you have selected the Helium Network**  
+:::warning **Ensure you have selected the Helium Network**
+
 You must select the Helium Network **before** searching for your device, else
-you may add your device on the wrong network and will not receive data. :::
+you may add your device on the wrong network and will not receive data.
+
+:::
 
 <img
   src={useBaseUrl(
