--- a/docs/use-the-network/console/migrating-devices/migrating-devices.mdx
+++ b/docs/use-the-network/console/migrating-devices/migrating-devices.mdx
@@ -32,7 +32,9 @@ much quicker.
 More information about XOR filters
 [here](https://engineering.helium.com/2021/07/29/console-updates-2.0.html).
 
-:::important Helium Console users are capped at ONE (1) Organization and 10
+:::important
+
+Helium Console users are capped at ONE (1) Organization and 10
 devices for their account.
 
 If your account as of March 31, 2022 exceeds this cap, you can continue using
