--- a/docs/use-the-network/console/migrating-devices/ttn-import.mdx
+++ b/docs/use-the-network/console/migrating-devices/ttn-import.mdx
@@ -121,9 +121,12 @@ devices are pulled over into your Helium Console!
 In the example migrated device below, you can see the attached label that was
 created from the TTN Application name.
 
-:::info  
+:::info
+
 Once your devices are organized using Labels, you can address them
-programmatically via the Console API. :::
+programmatically via the Console API.
+
+:::
 
 <img
   src={useBaseUrl(
