--- a/docs/use-the-network/console/profiles.mdx
+++ b/docs/use-the-network/console/profiles.mdx
@@ -14,10 +14,14 @@ and apply settings to a device or group of devices (via labels).
 Unlike other configuration settings, Profiles impact LoRAWAN’s protocol behavior
 and are binary in nature.
 
-:::important Configuration Profiles can be added to Device/Label nodes. The last
-Profile assigned to a device takes priority. For example, if a device has
-Profile A, and a label has Profile B, if that label is applied to the device
-then Profile B overrides Profile A. :::
+:::important
+
+Configuration Profiles can be added to Device/Label nodes. The last Profile
+assigned to a device takes priority. For example, if a device has Profile A, and
+a label has Profile B, if that label is applied to the device then Profile B
+overrides Profile A.
+
+:::
 
 Current settings that can be set via Profiles:
 
@@ -25,8 +29,12 @@ Current settings that can be set via Profiles:
 - [CF List](#cf-list)
 - [Receive Window Delay](#receive-window-delay)
 
-:::info For a video walkthrough of Configuration Profiles, check out our Tips
-and Tricks video [here](https://youtu.be/U0IHGT_irj8). :::
+:::info
+
+For a video walkthrough of Configuration Profiles, check out our Tips and Tricks
+video [here](https://youtu.be/U0IHGT_irj8).
+
+:::
 
 ## ADR
 
