--- a/docs/use-the-network/console/quickstart.mdx
+++ b/docs/use-the-network/console/quickstart.mdx
@@ -15,9 +15,13 @@ This Console quickstart guide will cover how to:
 - Register an account on Helium Console
 - Add a device to Helium Console and record device details
 
-:::info The cost per packet is $0.00001 USD \(24 byte packets\) which is
-equivalent to 1 Data Credit \(DC\). For more information please go
-[here](https://docs.helium.com/use-the-network/console/data-credits/). :::
+:::info
+
+The cost per packet is $0.00001 USD \(24 byte packets\) which is equivalent to 1
+Data Credit \(DC\). For more information please go
+[here](https://docs.helium.com/use-the-network/console/data-credits/).
+
+:::
 
 ## Create an account
 
@@ -57,7 +61,9 @@ Console when you create a new device. However, you can input your own `DevEUI`,
 `AppEUI`, and `AppKey` if your device is already provisioned with these
 credentials.
 
-:::important Helium Console users are capped at ONE (1) Organization and 10
+:::important
+
+Helium Console users are capped at ONE (1) Organization and 10
 devices for their account.
 
 If your account as of March 31, 2022 exceeds this cap, you can continue using
