--- a/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
+++ b/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
@@ -43,6 +43,9 @@ Before pursuing this configuration though, it is worth considering.
 - An OUI costs 90,000,000 DC (U.S. $900 dollars) at a minimum (10,000,000 DC for
   the OUI and 80,000,000 DC for the smallest address slab).
 
-  :::info For a video tutorial on setting up your own instance of Console, check
-  out our Tips and Tricks video
-  [here](https://www.youtube.com/watch?v=rVb5gfE_vs8) :::
+:::info
+
+For a video tutorial on setting up your own instance of Console, check out our
+Tips and Tricks video [here](https://www.youtube.com/watch?v=rVb5gfE_vs8)
+
+:::
