--- a/docs/mine-hnt/data-only-guides/rak-concentrators.mdx
+++ b/docs/mine-hnt/data-only-guides/rak-concentrators.mdx
@@ -21,12 +21,16 @@ This configuration can be achieved by installing the **_helium_gateway_**
 service available on the [gateway-rs](https://github.com/helium/gateway-rs)
 repository.
 
-:::warning Data Only Hotspots cannot earn $HNT, at least for now, and after
-milestone 2 they will earn $HNT only for Device Packet Transfer. Remember to
-keep an eye on [Light Hotspots - BETA](/mine-hnt/light-hotspots) and the
+:::warning
+
+Data Only Hotspots cannot earn $HNT, at least for now, and after milestone 2
+they will earn $HNT only for Device Packet Transfer. Remember to keep an eye on
+[Light Hotspots - BETA](/mine-hnt/light-hotspots) and the
 **#gateway-development** channel on the
 [Helium Discord Server](https://discord.gg/helium) to check how the development
-process evolves. :::
+process evolves.
+
+:::
 
 ### Video Guide for Setup
 
@@ -60,8 +64,12 @@ this guide.
 [rak2287 pi hat]: https://store.rakwireless.com/products/rak2287-pi-hat
 [rak2247 pi hat]: https://store.rakwireless.com/products/rak2247-pi-hat
 
-:::important To use the concentrator module with a Raspberry Pi HAT, you must
-make sure to order the variation with the SPI interface. :::
+:::important
+
+To use the concentrator module with a Raspberry Pi HAT, you must make sure to
+order the variation with the SPI interface.
+
+:::
 
 Let's get started!
 
@@ -150,9 +158,13 @@ rak-gateway ttn-gateway[1886]: # BEACON sent so far: 0
 rak-gateway ttn-gateway[1886]: # BEACON rejected: 0
 ```
 
-:::note `ttn-gateway` is just the name for the LoRa packet forwarder service in
-the configuration for these RAK concentrators; this is like a "legacy name" that
-doesn’t change when using different network servers. :::
+:::note
+
+`ttn-gateway` is just the name for the LoRa packet forwarder service in the
+configuration for these RAK concentrators; this is like a "legacy name" that
+doesn’t change when using different network servers.
+
+:::
 
 ### Edit the packet forwarder settings
 
@@ -176,10 +188,13 @@ Close the editor by pressing CTRL + X, press ENTER to save the file and restart
 the packet forwarder to apply the changes by selecting the option _Restart
 packet-forwarder_ within the _gateway-config_ interface.
 
-:::important Every time a new region is selected using the _Setup RAK Gateway
-Channel Plan_ option, these settings are replaced with the default
-configuration. So, make sure to keep this in mind if you modify the region
-later. :::important
+:::important
+
+Every time a new region is selected using the _Setup RAK Gateway Channel Plan_
+option, these settings are replaced with the default configuration. So, make
+sure to keep this in mind if you modify the region later.
+
+:::
 
 ## Helium Gateway service installation
 
@@ -342,9 +357,12 @@ Don't be surprised if you find some differences between those console flavors,
 basically staging is where the new features are tested before their rollout to
 production.
 
-:::important If the device you will use for testing is registered on the
-production console, it's better to delete it from there to avoid any unexpected
-behavior. :::
+:::important
+
+If the device you will use for testing is registered on the production console,
+it's better to delete it from there to avoid any unexpected behavior.
+
+:::
 
 To register your end device on the console, you can follow the steps described
 on
