--- a/docs/use-the-network/console/adding-devices.mdx
+++ b/docs/use-the-network/console/adding-devices.mdx
@@ -28,13 +28,19 @@ much quicker.
 More information about XOR filters
 [here](https://engineering.helium.com/2021/07/29/console-updates-2.0.html).
 
-:::info For a video tutorial on adding and importing devices, check out our Tips
-and Tricks video [here](https://youtu.be/ntr839pqWpg). :::
+:::info
+
+For a video tutorial on adding and importing devices, check out our Tips and
+Tricks video [here](https://youtu.be/ntr839pqWpg).
+
+:::
 
 To add a device, go to **Devices** and click the **+ Add Device** icon. The Add
 New Device screen appears.
 
-:::important Helium Console users are capped at ONE (1) Organization and 10
+:::important
+
+Helium Console users are capped at ONE (1) Organization and 10
 devices for their account.
 
 If your account as of March 31, 2022 exceeds this cap, you can continue using
