--- a/docs/use-the-network/console/integrations/aws-iot-core.mdx
+++ b/docs/use-the-network/console/integrations/aws-iot-core.mdx
@@ -74,8 +74,12 @@ into the "**Filter Policies**" box and check the box to the left of the row:
   )}
 />
 
-:::warning Ensure you record and store these keys securely, as you will not have
-an opportunity to get access to them again! :::
+:::warning
+
+Ensure you record and store these keys securely, as you will not have an
+opportunity to get access to them again!
+
+:::
 
 Back in the **Helium Console**, enter the credentials we just created under
 **AWS Connection Details,** as well as the AWS region that you would like AWS
@@ -101,8 +105,12 @@ devices for easy management. To connect one or more devices to one or more
 integrations, simply connect the Device and Integration nodes on the Flows
 Workspace.
 
-:::info Quick video tutorial connecting devices to an integration
-[here](https://www.youtube.com/watch?v=lnERw1f7TGE). :::
+:::info
+
+Quick video tutorial connecting devices to an integration
+[here](https://www.youtube.com/watch?v=lnERw1f7TGE).
+
+:::
 
 Node elements (devices, labels, integrations) need to be created before they're
 available on the Flows Workspace. More information about Flows
@@ -126,7 +134,8 @@ Example: `helium/devices/4f10d99a-e22e-4007-a3f0-6af3bc63acfe/down`
 ## AWS IoT MQTT Messages
 
 To send data to a device, use JSON with a `payload_raw` field with a base64
-encoded string.  
+encoded string.
+
 **Sending Data to Device \(Downlink\):**
 
 ```javascript
@@ -137,7 +146,8 @@ encoded string.
 
 When receiving data from a device, the messages will be in JSON and look like
 the following. The data from the device is in the `payload` field, and is a
-base64 encoded string.  
+base64 encoded string.
+
 **Receiving data from Device \(Uplink\):**
 
 ```javascript
