--- a/docs/use-the-network/console/integrations/ubidots.mdx
+++ b/docs/use-the-network/console/integrations/ubidots.mdx
@@ -173,8 +173,12 @@ devices for easy management. To connect one or more devices to one or more
 integrations, simply connect the Device and Integration nodes on the Flows
 Workspace.
 
-:::info Quick video tutorial connecting devices to an integration
-[here](https://www.youtube.com/watch?v=lnERw1f7TGE). :::
+:::info
+
+Quick video tutorial connecting devices to an integration
+[here](https://www.youtube.com/watch?v=lnERw1f7TGE).
+
+:::
 
 Node elements (devices, labels, integrations) need to be created before they're
 available on the Flows Workspace. More information about Flows
