--- a/docs/use-the-network/console/users.mdx
+++ b/docs/use-the-network/console/users.mdx
@@ -106,8 +106,11 @@ Console instance.
 Exporting Organizations allow users to transfer the following information to
 another Console instance.
 
-:::info Users will need to be re-added, and Data Credit balances are not
-transferable. :::
+:::info
+
+Users will need to be re-added, and Data Credit balances are not transferable.
+
+:::
 
 - Devices
 - Labels
@@ -130,12 +133,20 @@ the Organization to export is current.
 Importing an Organization can be performed upon first login for the new Console
 instance or later from the Organizations section.
 
-:::important Prior to import, set the Organization on the previous Console
-instance to inactive and make sure no duplicate devices exist on the new Console
-instance. This will allow devices to join on the new Console instance. :::
+:::important
 
-:::info AWS IoT Core users - before importing users should delete existing
-migrated device certificates on AWS IoT Core. :::
+Prior to import, set the Organization on the previous Console instance to
+inactive and make sure no duplicate devices exist on the new Console instance.
+This will allow devices to join on the new Console instance.
+
+:::
+
+:::info
+
+AWS IoT Core users - before importing users should delete existing migrated
+device certificates on AWS IoT Core.
+
+:::
 
 To import an Organization, navigate to the Organizations section and click + Add
 Organization.
