--- a/docs/use-the-network/console/users.mdx
+++ b/docs/use-the-network/console/users.mdx
@@ -67,7 +67,9 @@ using the left side navigation, and then click **+ Add Organization** in the
 upper right. To switch to another Organization click the **Switch** button on
 the list of Organizations on the **Dashboard** page.
 
-:::important Helium Console users are capped at ONE (1) Organization and 10
+:::important
+
+Helium Console users are capped at ONE (1) Organization and 10
 devices for their account.
 
 If your account as of March 31, 2022 exceeds this cap, you can continue using
@@ -94,7 +96,10 @@ For example, if a user wants to migrate their Organization from a Console
 instance hosted by one provider to another or to their own hosted version of
 Console.
 
-:::important Data Credit balances are not transferable and will not be migrated.
+:::important
+
+Data Credit balances are not transferable and will not be migrated.
+
 :::
 
 Migrating Organizations requires exporting the desired Organization by saving
