--- a/docs/api/blockchain/accounts.mdx
+++ b/docs/api/blockchain/accounts.mdx
@@ -539,8 +539,8 @@ The oui list for account `13tyMLKRFYURNBQqLSqNJg9k41maP1A7Bh8QYxR13oWv7EnFooc`
 
 :::caution
 
-The `/activity` route will be deprecated on May 1, 2022 and will be
-replaced by [`/roles`, described below](#roles-for-account)
+The `/activity` route will be deprecated on May 1, 2022 and will be replaced by
+[`/roles`, described below](#roles-for-account)
 
 :::
 
