--- a/docs/api/blockchain/hotspots.mdx
+++ b/docs/api/blockchain/hotspots.mdx
@@ -789,8 +789,8 @@ GET https://api.helium.io/v1/hotspots/:address/activity
 
 :::caution
 
-The `/activity` route will be deprecated on May 1, 2022 and will be
-replaced by [`/roles`, described below](#hotspot-roles)
+The `/activity` route will be deprecated on May 1, 2022 and will be replaced by
+[`/roles`, described below](#hotspot-roles)
 
 :::
 
@@ -1937,8 +1937,8 @@ This route is paged using a `cursor`.
 
 :::info
 
-For older reward results, if the `type` is `null` the amount is a total
-for that hotspot in the given block.
+For older reward results, if the `type` is `null` the amount is a total for that
+hotspot in the given block.
 
 :::
 
@@ -2028,8 +2028,8 @@ This route is paged using a `cursor`.
 
 :::info
 
-For older reward results, if the `type` is `null` the amount is a total
-for that hotspot in the given block.
+For older reward results, if the `type` is `null` the amount is a total for that
+hotspot in the given block.
 
 :::
 
