--- a/docs/api/blockchain/introduction.mdx
+++ b/docs/api/blockchain/introduction.mdx
@@ -61,7 +61,7 @@ page.
 
 :::info
 
-In order to improve caching the API may return an empty data array and a
-cursor. Use the cursor to request more data.
+In order to improve caching the API may return an empty data array and a cursor.
+Use the cursor to request more data.
 
 :::
