--- a/docs/blockchain/helium-token/helium-token.mdx
+++ b/docs/blockchain/helium-token/helium-token.mdx
@@ -161,8 +161,8 @@ the following math:
 
 :::important
 
-Once burned, DCs are owned by the Helium wallet specified in the
-burn transaction. They are non-transferrable and can only be used by the wallet
+Once burned, DCs are owned by the Helium wallet specified in the burn
+transaction. They are non-transferrable and can only be used by the wallet
 owner.
 
 :::
