--- a/docs/mine-hnt/full-hotspots/become-a-maker/docker-integration.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/docker-integration.mdx
@@ -95,9 +95,9 @@ please see
 
 :::warning
 
-If you are using our packet forwarder, be sure to customize the
-`rssi_offset` field for your particular concentrator design. Misconfiguring this
-value may result in decreased Proof-of-Coverage performance for your customers.
+If you are using our packet forwarder, be sure to customize the `rssi_offset`
+field for your particular concentrator design. Misconfiguring this value may
+result in decreased Proof-of-Coverage performance for your customers.
 
 :::
 
