--- a/docs/mine-hnt/validators/troubleshooting.mdx
+++ b/docs/mine-hnt/validators/troubleshooting.mdx
@@ -88,8 +88,8 @@ using `nc -zv -w 2 <ip> 8080`
 
 :::tip
 
-This also works for your Validator 2154 port, just swap it in for the
-8080 above!
+This also works for your Validator 2154 port, just swap it in for the 8080
+above!
 
 :::
 
