--- a/docs/use-the-network/console/adding-devices.mdx
+++ b/docs/use-the-network/console/adding-devices.mdx
@@ -40,8 +40,8 @@ New Device screen appears.
 
 :::important
 
-Helium Console users are capped at ONE (1) Organization and 10
-devices for their account.
+Helium Console users are capped at ONE (1) Organization and 10 devices for their
+account.
 
 If your account as of March 31, 2022 exceeds this cap, you can continue using
 Helium Console with those existing devices and Orgs for 12 calendar months, but
