--- a/docs/use-the-network/coverage-mapping/adeunis-mapper.mdx
+++ b/docs/use-the-network/coverage-mapping/adeunis-mapper.mdx
@@ -39,9 +39,9 @@ properly operate the field test device.
 
 :::important
 
-You must power on the device in a location with coverage in order
-for the device to first join the network. If the device is not able to join, it
-will never begin sending uplinks.
+You must power on the device in a location with coverage in order for the device
+to first join the network. If the device is not able to join, it will never
+begin sending uplinks.
 
 :::
 
@@ -105,9 +105,9 @@ and twice if it is off.
 
 :::important
 
-Ignore the PER % number as shown in the packet count screen below.
-This value is not meaningful for the current configuration. Only pay attention
-to the UL\(Uplink\) Count.
+Ignore the PER % number as shown in the packet count screen below. This value is
+not meaningful for the current configuration. Only pay attention to the
+UL\(Uplink\) Count.
 
 :::
 
