--- a/docs/use-the-network/devices/development/rakwireless/wisblock-4631/arduino.mdx
+++ b/docs/use-the-network/devices/development/rakwireless/wisblock-4631/arduino.mdx
@@ -77,13 +77,18 @@ Following the Arduino IDE installation instructions that are appropriate for
 your development platform. It is suggested you allow the device driver
 installation for your target device if prompted.
 
-:::warning  
-_**If you are using Windows 10**_.  
-Do _**NOT**_ install the Arduino IDE from the Microsoft App Store. Please
-install the original Arduino IDE from the
-[Arduino official website](https://www.arduino.cc/en/Guide/Windows)​!. The
-Arduino app from the Microsoft App Store has problems using third party Board
-Support Packages. :::
+:::warning
+
+_**If you are using Windows 10**_. Do _**NOT**_ install the Arduino IDE from the
+Microsoft App Store.
+
+Please install the original Arduino IDE from the
+[Arduino official website](https://www.arduino.cc/en/Guide/Windows)​!
+
+The Arduino app from the Microsoft App Store has problems using third party
+Board Support Packages.
+
+:::
 
 ### Installing Arduino Board Support <a id="arduino-board-support"></a>
 
