--- a/docs/api/blockchain/validators.mdx
+++ b/docs/api/blockchain/validators.mdx
@@ -6359,8 +6359,8 @@ GET https://api.helium.io/v1/validators/:address/activity
 
 :::caution
 
-The `/activity` route will be deprecated on May 1, 2022 and will be
-replaced by [`/roles`, described below](#validator-roles)
+The `/activity` route will be deprecated on May 1, 2022 and will be replaced by
+[`/roles`, described below](#validator-roles)
 
 :::
 
