--- a/docs/use-the-network/console/integrations/azure.mdx
+++ b/docs/use-the-network/console/integrations/azure.mdx
@@ -18,9 +18,8 @@ the same client id which will cause connectivity instability.
 
 :::important
 
-For more information getting started with the Azure IoT Hub
-integration, check out our Tips & Tricks video on YouTube
-[here](https://youtu.be/emJ88cGF-Ew).
+For more information getting started with the Azure IoT Hub integration, check
+out our Tips & Tricks video on YouTube [here](https://youtu.be/emJ88cGF-Ew).
 
 :::
 
@@ -43,9 +42,9 @@ Console requires the following permissions.
 
 :::important
 
-You must create your own policy and ensure it includes the
-permissions listed above. Although the `iothubowner` policy includes those by
-default it's not designed to be used for external integrations.
+You must create your own policy and ensure it includes the permissions listed
+above. Although the `iothubowner` policy includes those by default it's not
+designed to be used for external integrations.
 
 :::
 
