--- a/docs/use-the-network/console/migrating-devices/migrating-devices.mdx
+++ b/docs/use-the-network/console/migrating-devices/migrating-devices.mdx
@@ -34,8 +34,8 @@ More information about XOR filters
 
 :::important
 
-Helium Console users are capped at ONE (1) Organization and 10
-devices for their account.
+Helium Console users are capped at ONE (1) Organization and 10 devices for their
+account.
 
 If your account as of March 31, 2022 exceeds this cap, you can continue using
 Helium Console with those existing devices and Orgs for 12 calendar months, but
