--- a/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
+++ b/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
@@ -25,7 +25,7 @@ Note: Arduino or MBED experts can skip all the following beginner setup steps, I
 
 ## Objective and Requirements
 
-In this version 0.0.2 of this guide, you will learn:
+In this version 0.2.1 of this guide, you will learn:
 
 - How to setup your environment
 - How to program a basic application that will send packets over the Helium
@@ -153,6 +153,10 @@ MKRWANFWUpdate_standalone make sure you run the serial monitor to fully update t
     "img/use-the-network/devices/development/arduino/lora-vision-shield/mkrwanFWUpdate_standalone-image.png"
   )}
 />
+
+::: 
+The Install!
+:::
 
 
 ### Upload Sketch
@@ -464,7 +468,9 @@ Once the above sketch is compiled and you have checked the port and loaded the S
   )}
 />
 
-
+:::
+Helium Console
+:::
 
 ### Helium Console to Arduino Sketch
 
@@ -505,6 +511,11 @@ our device page, Scroll down to the chart and click the black debug icon to see 
 Congratulations! You have just transmitted data on the Helium network! The next
 step is to learn how to use your device data to build integrations to view your data, visit the Helium
 Integrations docs [here](/use-the-network/console/integrations).
+
+
+:::
+Adafruit.io
+:::
 
 
 ### Connect to [Adafruit.io](https://io.adafruit.com/)
@@ -638,6 +649,13 @@ Not as important but fun to go to Adafruit dashboard and click the setup icon to
     "img/use-the-network/devices/development/arduino/lora-vision-shield/adafruit-dashboard.png"
   )}
 />
+
+
+:::
+MQTT Adafruit with CayenneLPP
+
+Easier but less flexible
+:::
 
 
 
@@ -891,6 +909,11 @@ void loop() {
 ### Video Guides
 
 - [Community Tutorial Video](https://www.youtube.com/watch?v=wt_WZ1sBDeM&list=PL57Dnr1H_eguoFKLWY0nLMz0QI3nyQVmQ&index=12) 
+
+
+:::
+Fails
+:::
 
 
 ### Fails
