--- a/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
+++ b/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
@@ -154,7 +154,7 @@ MKRWANFWUpdate_standalone make sure you run the serial monitor to fully update t
   )}
 />
 
-::: 
+:::important
 The Install!
 :::
 
@@ -468,8 +468,10 @@ Once the above sketch is compiled and you have checked the port and loaded the S
   )}
 />
 
-:::
-Helium Console
+:::important
+
+The Helium Console
+
 :::
 
 ### Helium Console to Arduino Sketch
@@ -513,8 +515,10 @@ step is to learn how to use your device data to build integrations to view your 
 Integrations docs [here](/use-the-network/console/integrations).
 
 
-:::
+:::important
+
 Adafruit.io
+
 :::
 
 
@@ -909,14 +913,17 @@ void loop() {
 ### Video Guides
 
 - [Community Tutorial Video](https://www.youtube.com/watch?v=wt_WZ1sBDeM&list=PL57Dnr1H_eguoFKLWY0nLMz0QI3nyQVmQ&index=12) 
-
-
-:::
-Fails
-:::
-
+- 
 
 ### Fails
+
+:::important
+
+Fails
+
+:::
+
+
 
 What to do when it fails! Lots of possible issues, but your best bet is the Helium console debug and connection graph. 
 1. If you are not getting a red dot your 3 secret numberes (deviceEUI, AppEUI, AppKey) are probably not correct or you forgot to run the MRKWAN ```MKRWANFWUpdate_standalone``` code [here](#compile-sketch-and-copy-the-device-eui)
