--- a/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
+++ b/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
@@ -655,10 +655,11 @@ Not as important but fun to go to Adafruit dashboard and click the setup icon to
 />
 
 
-:::
-MQTT Adafruit with CayenneLPP
+:::important
 
+MQTT Adafruit with CayenneLPP
 Easier but less flexible
+
 :::
 
 
